--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,22 +2,21 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-    
+
       - name: Login to Docker Hub
         run: docker login -u jaeun -p ${{ secrets.DOCKER_HUB_PASSWORD }}
-      
+
       - name: Build Docker Image
         run: docker build -t jaeun/chat-server:latest .
 
@@ -34,4 +33,4 @@ jobs:
             docker stop chatserver || true
             docker rm chatserver || true              
             docker rmi jaeun/chat-server:latest || true
-            docker run -d -p 8081:8081 --network-alias=chat-server --name chatserver jaeun/chat-server:latest
+            docker run -d -p 8081:8081 --network=bridge --network-alias=chat-server --name chatserver jaeun/chat-server:latest
