--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,4 +33,4 @@ jobs:
             docker stop chatserver || true
             docker rm chatserver || true              
             docker rmi jaeun/chat-server:latest || true
-            docker run -d -p 8081:8081 --name chatserver jaeun/chat-server:latest
+            docker run -d -p 8081:8081 --net web_net --name chatserver jaeun/chat-server:latest
